# CityGenerator

./: .gitignore  CMakeLists.txt  README.md  STRUCTURE.md
.claude/: settings.local.json
src/: SOP_CityBuilding.cpp  SOP_CityBuilding.h  SOP_CitySimulator.cpp  SOP_CitySimulator.h
src/commands/: Commands.cpp  Commands.h  ICommand.h
src/core/: BasisField.h  CityBlock.cpp  CityBlock.h  GridStorage.h  RK4Integrator.cpp  RK4Integrator.h  RoadGraph.cpp  RoadGraph.h  SimulationState.h  StreamlineGenerator.cpp  StreamlineGenerator.h  StreamlineTensorField.h  Tensor.h  TensorField.cpp  TensorField.h  ZoneType.h
src/factory/: Factories.cpp  Factories.h
src/observers/: ISimObserver.h  Observers.cpp  Observers.h
src/persistence/: Persistence.cpp  Persistence.h
src/simulator/: BlockExtraction.cpp  BlockExtraction.h  CitySimulator.cpp  CitySimulator.h
src/strategies/: GrowthStrategies.cpp  GrowthStrategies.h  IGrowthStrategy.h
